--- a/public/main.css
+++ b/public/main.css
@@ -115,7 +115,7 @@ footer {
     color: #555;
 }
 
-#schedule {
+#schedule, #friends {
     margin: 40px auto;
     max-width: 760px;
     padding: 24px;
